--- a/composer.json
+++ b/composer.json
@@ -20,5 +20,11 @@
     },
     "require": {
         "php": "~5.6 || ~7.1"
+    },
+
+    "require-dev": {
+        "phpunit/phpunit": "~5.7",
+        "overtrue/phplint": "~1.1",
+        "squizlabs/php_codesniffer": "~3.4"
     }
 }
