--- a/composer.json
+++ b/composer.json
@@ -26,5 +26,13 @@
         "phpunit/phpunit": "~5.7",
         "overtrue/phplint": "~1.1",
         "squizlabs/php_codesniffer": "~3.4"
+    },
+
+    "scripts": {
+        "analyze": "phpstan analyse --memory-limit=2G",
+        "lint": "phplint --no-cache --ansi src",
+        "sniff": "phpcs --runtime-set ignore_warnings_on_exit true",
+        "sniff-nowarn": "phpcs -n",
+        "test": "phpunit"
     }
 }
