--- a/phpcs.xml.dist
+++ b/phpcs.xml.dist
@@ -1,12 +1,17 @@
 <?xml version="1.0"?>
 <ruleset name="PHP_CodeSniffer">
 
+    <file>src</file>
+    <file>tests</file>
+
+    <arg name="colors" />
+    <arg name="parallel" value="75" />
+
+
     <rule ref="PSR2">
         <exclude name="Squiz.WhiteSpace.ControlStructureSpacing.SpacingBeforeClose"/>
         <exclude name="PSR2.ControlStructures.ControlStructureSpacing.SpacingAfterOpenBrace"/>
         <exclude name="PSR2.Namespaces.UseDeclaration.MultipleDeclarations"/>
     </rule>
-
-    <exclude-pattern type="relative">^tests/*</exclude-pattern>
 
 </ruleset>
