--- a/composer.json
+++ b/composer.json
@@ -19,17 +19,16 @@
         }
     },
     "require": {
-        "php": "~7.1"
+        "php": ">=7.3"
     },
 
     "require-dev": {
-        "phpunit/phpunit": "~5.7",
+        "phpunit/phpunit": "~9.0",
         "overtrue/phplint": "~1.1",
         "squizlabs/php_codesniffer": "~3.4"
     },
 
     "scripts": {
-        "analyze": "phpstan analyse --memory-limit=2G",
         "lint": "phplint --no-cache --ansi src",
         "sniff": "phpcs --runtime-set ignore_warnings_on_exit true",
         "sniff-nowarn": "phpcs -n",
