--- a/phpunit.xml.dist
+++ b/phpunit.xml.dist
@@ -1,14 +1,16 @@
 <?xml version="1.0"?>
 <phpunit
+    xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+    xsi:noNamespaceSchemaLocation="https://schema.phpunit.de/9.3/phpunit.xsd"
+
     backupGlobals="false"
     backupStaticAttributes="false"
-    cacheTokens="true"
+    cacheResultFile=".phpunit/.phpunit.result.cache"
     colors="true"
     convertErrorsToExceptions="true"
     convertNoticesToExceptions="true"
     convertWarningsToExceptions="true"
     forceCoversAnnotation="false"
-    mapTestClassNameToCoveredClassName="true"
     processIsolation="false"
 
     stopOnError="false"
@@ -18,31 +20,31 @@
 
     beStrictAboutTestsThatDoNotTestAnything="false"
     beStrictAboutOutputDuringTests="true"
-    beStrictAboutTestSize="true"
 
     timeoutForSmallTests="2"
     verbose="true">
 
-    <logging>
-        <log type="coverage-html" target=".phpunit/coverage" charset="UTF-8" highlight="true" lowUpperBound="50" highLowerBound="80"/>
-        <log type="coverage-text" target="php://stdout" showUncoveredFiles="false"/>
-    </logging>
 
-    <testsuites>
-        <testsuite>
-            <directory>tests</directory>
-        </testsuite>
-    </testsuites>
-
-    <filter>
-        <whitelist processUncoveredFilesFromWhitelist="true">
-            <directory>src/</directory>
-        </whitelist>
-    </filter>
+    <coverage processUncoveredFiles="true">
+        <include>
+            <directory>src</directory>
+        </include>
+        <report>
+            <clover outputFile=".phpunit/clover.xml"/>
+            <html outputDirectory=".phpunit/coverage"/>
+            <text outputFile="php://stdout" showUncoveredFiles="false" showOnlySummary="false"/>
+        </report>
+    </coverage>
 
     <php>
         <ini name="display_errors" value="On" />
         <ini name="error_reporting" value="32767" />
         <ini name="memory_limit" value="1G" />
     </php>
+
+    <testsuites>
+        <testsuite name="Unit Tests">
+            <directory>tests</directory>
+        </testsuite>
+    </testsuites>
 </phpunit>
